Fixed separations on mobile

--- a/css/general.css
+++ b/css/general.css
@@ -87,14 +87,24 @@ h1, h2, h3, h4 {
 }
 
 h1, .uno {
-  font-size: 3.157em;
+  font-size: 2.157em;
 }
 
-h2, .dos {font-size: 2.369em;}
+h2, .dos {font-size: 1.369em;}
 
 h3, .tres {font-size: 1.777em;}
 
 h4, .cuatro {font-size: 1.333em;}
+
+@media only screen and (min-width: 50em) and (min-height: 35.875em) {
+   
+    h1, .uno {
+      font-size: 3.157em;
+    }
+
+    h2, .dos {font-size: 2.369em;}
+    
+}
 
 small, .font_small {font-size: 0.75em;}
 
@@ -679,6 +689,18 @@ header {
 
 .prompter li:first-child {
     font-weight: 700;
+}
+
+.internal-content {
+    padding-right: 0%;
+}
+
+.push-top {
+    margin-top: 4rem; 
+}
+
+.push-top-half {
+    margin-top: 5rem; 
 }
 
 @media only screen and (min-width: 60em) { 
